--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  background-image: url('https://i.imgur.com/j0f9lNU.jpg');
+  background-image: url('https://i.imgur.com/Ygfa6hl.jpg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
